<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_extended_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".ExtendedInfoFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.Barrier
            android:id="@+id/barrier4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="tv_description,tv_title,tv_date,tv_Amount,tv_picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/extended_info_textview_date"
            app:layout_constraintBaseline_toBaselineOf="@+id/edit_date"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/extended_info_textview_title"
            app:layout_constraintBaseline_toBaselineOf="@+id/edit_title"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_Amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/extended_info_textview_amount"
            app:layout_constraintBaseline_toBaselineOf="@+id/edit_amount"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/extended_info_textview_desc"
            app:layout_constraintBaseline_toBaselineOf="@+id/edit_desc"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/extended_info_textview_pic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_description" />


        <EditText
            android:id="@+id/edit_date"
            style="@style/extended_info_edittext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/barrier4"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_title"
            style="@style/extended_info_edittext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/barrier4"
            app:layout_constraintTop_toBottomOf="@+id/edit_date" />

        <EditText
            android:id="@+id/edit_amount"
            style="@style/extended_info_edittext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/barrier4"
            app:layout_constraintTop_toBottomOf="@+id/edit_title" />

        <EditText
            android:id="@+id/edit_desc"
            style="@style/extended_info_edittext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/barrier4"
            app:layout_constraintTop_toBottomOf="@+id/edit_amount" />

        <ImageView
            android:id="@+id/edit_pic"
            style="@style/extended_info_edittext"
            android:layout_height="0dp"
            android:layout_marginBottom="100dp"
            android:src="@drawable/ic_img_placeholder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/barrier4"
            app:layout_constraintTop_toBottomOf="@+id/edit_desc" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="52dp"
                android:text="@string/btn_save" />

        </RelativeLayout>
    </android.support.constraint.ConstraintLayout>


</LinearLayout>